# auth

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml
src/auth/application/usecases/user/: create_new_user.py  create_user.py
src/auth/domain/events/: __init__.py  broker.py  future_manager.py
src/auth/domain/events/agents/user/: create.py
src/auth/domain/events/user/: __init__.py  create.py
src/auth/domain/interfaces/: __init__.py  di_container.py
src/auth/domain/interfaces/core/: __init__.py  logger.py  settings.py
src/auth/domain/interfaces/databases/: __init__.py  storage_with_context.py  storage_without_context.py
src/auth/domain/interfaces/events/: __init__.py  asyncio_worker.py  broker_manager.py  future_manager.py  message_bus.py
src/auth/infrastructure/: __init__.py  app_factory.py  di_container_factory.py
src/auth/infrastructure/core/: __init__.py  logger.py  settings.py
src/auth/infrastructure/databases/: __init__.py  cache.py  database.py  db.py
src/auth/infrastructure/events/: __init__.py  broker_manager.py  future_manager.py
src/auth/infrastructure/utils/: __init__.py  singleton.py
src/auth/presentation/api/v1/: user.py
