[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 79
extend-exclude = "migrations"

[tool.flake8]
max-line-length = 79
exclude = [
  "*migrations*",
  "__pycache__",
  "__init__.py"
]

[tool.isort]
line_length = 79
include_trailing_comma = true

[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Sergey Bilibin <s.bilibin2017@yandex.ru>"]
readme = "README.md"
packages = [{include = "auth", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
faust = "^1.10.4"
fastapi = "^0.109.0"
orjson = "^3.9.10"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
redis = "^5.0.1"
uvicorn = "^0.26.0"
gunicorn = "^21.2.0"
aiologger = "^0.7.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-pyproject = "*"
mypy = "*"
pyright = "*"
black = "*"
isort = "*"
autoflake8 = "*"
toml-sort = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
autoflake = "*"

[tool.pyright]
include = [
  "src/**/*"
]
venvPath = "."
venv = ".venv"
